--- a/finalhomework/123.html
+++ b/finalhomework/123.html
@@ -600,7 +600,7 @@
     document.body.scrollTop = document.documentElement.scrollTop = 0;
 }
 slider.onclick=function(){
-    alert("此图片可以自由轮播");
+    alert("此图片可以实现自由轮播");
 }
 </script>
 
