--- a/finalhomework/123.html
+++ b/finalhomework/123.html
@@ -1216,7 +1216,7 @@
 
                     slider.onclick=function(){
 
-                        alert("此图片可以自由轮播");
+                        alert("此图片实现可以自由轮播");
 
                     }
 
